# geometry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  setup.py
.github/workflows/: test.yaml
cmake/: fcpw.cmake  libigl.cmake  pybind11.cmake
geometry/: __init__.py  array.py  base.py  bounds.py  utils.py
geometry/discrete/: __init__.py  points.py  trianglemesh.py
geometry/implicit/: __init__.py
geometry/utils/: __init__.py  trackedarray.py
src/bindings/: core.cpp  fcpw.cpp  igl.cpp
src/cpp/libigl/: point_mesh_squared_distance.cpp
src/geometry/: __init__.py  array.py  base.py  bounds.py  cache.py  colors.py  curve.py  pointcloud.py  points.py  polyline.py  progress.py  sdf.py  tensor.py  trianglemesh.py  utils.py  voxels.py
src/geometry/formats/: __init__.py  draco.py  drc.py  obj.py  off.py  stl.py
src/geometry/implicit/: __init__.py  implicit.py  primitives.py  tpms.py  util.py  voronoi.py
src/geometry/mesh/: __init__.py  boolean.py  primitives.py  trianglemesh.py  trimesh.py
src/geometry/sdf/: __init__.py  minimal.py  noise.py  sdf.py  tpms.py
test/: test_mesh_primitives.py  test_points.py  test_trianglemesh.py
